# trxcore

./: .gitignore  README.md  benchmark_extended.py  grammar.md  guide.md  hello_nova.trx  interpreter_example.py  manifest.trx  parser.py  prelude.trx  pyproject.toml  requirements.txt  rules.trx  state_machine.trx  suggestions.md  translator.py
.github/workflows/: ci.yml
docs/: academic_overview.md  api_reference.md  bizarro.md  compat.md  conformance.md  double_talent_review.md  final_openai_review.md  grammar.md  guide.md  impact_report.md  rebuttal_report.md  skeptical_followup.md  skeptical_report.md  test_report.md  translation_contract.md  trx_intent_core_v1.md  user_guide.md  why_trexxak.md
editor/vscode/trexx/: .vscodeignore  LICENSE  README.md  language-configuration.json  package.json  (+1 more)
parser/: parser.py
rules/core/: manifest.trx  prelude.trx  rules_current.trx
rules/examples/: agent_debate_conductor.trx  async_reactive.trx  boot.trx  conditionals.trx  hello_nova.trx  loops.trx  network_chat.trx  persona_memory_engine.trx  research_scout.trx  state_machine.trx
rules/rules_historic/: rules_1_1.trx
src/: __init__.py
src/trxcore/: __init__.py  benchmark_extended.py  cli.py  conformance.py  parser.py  runtime.py  translator.py
src/trxcore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_basic.py  test_cli_contract.py  test_compare.py  test_conformance.py  test_docs_snippets.py  test_dual_translation.py  test_errors.py  test_examples.py  test_flagship_demos.py  test_runtime.py  test_translation_examples.py
(+9 files in other folders)
