[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trxcore"
version = "0.2.0"
description = "Trexxak symbolic grammar tools"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Markus Machat"}]
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
trexx = "trxcore.cli:main"
